<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imageView"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"/>
        </TableRow>
<TableRow
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<androidx.appcompat.widget.AppCompatCheckedTextView
    android:id="@+id/TextLanguaLabel"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:textSize="@dimen/size"
    android:text="@string/languageLabel"/>
    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/TextLangua"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="@dimen/size"
        android:text="@string/language"/>
</TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/TextDesityLable"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/size"
                android:text="@string/DesityLable"/>
            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/TextDesity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/size"
                android:text="@string/Desity"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/TextNightModeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/size"
                android:layout_weight="1"
                android:text="@string/textNightModeLabel"/>
            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/TextNightMode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/size"
                android:text="@string/textNightMode"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/TextVersionLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/size"
                android:text="@string/VersionLabel"/>
            <androidx.appcompat.widget.AppCompatCheckedTextView
                android:id="@+id/TextVersion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/size"
                android:text="@string/Version"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/linearlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"/>
</ScrollView>

        </TableRow>







  </TableLayout>

</LinearLayout>